header part and neviagtion part responsive and some slide changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergency Service</title>
+    <title>Emergency</title>
     <!-- tailwind -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- fontawasome -->
@@ -13,25 +13,26 @@
 </head>
 <body class="bg-[#F5FFF6] ">
     <header class="mx-auto max-w-[1920px] bg-white">
-        <nav class="bg-[#FFFFFF] flex justify-between items-center mb-5">
+        <nav class="bg-white flex justify-between items-center mb-5 px-5 py-5 lg:px-12">
             <div class="">
             <ul class="flex items-center gap-[10px]">
                 <li><img src="./assets/logo.png" alt="" class="max-w-[60px] "></li>
                 <li class="font-bold text-2xl text-[#006747]">Emergency <br> Service</li>
             </ul>
             </div>
-            <div class="flex gap-[20px]">
+            <div class="flex gap-2 lg:gap-5">
                 <!-- hart -->
-                <div class="flex gap-[10px] items-center bg-[#41ff6a31] p-[11px] rounded-[50px] pr-9 pl-9">
-                  <p class="font-bold">0</p>
+                <div class="flex gap-1.5 items-center bg-[#41ff6a31] px-5 py-3  lg:px-10 rounded-full ">
+                  <p class="font-bold text-[1rem] lg:text-base">0</p>
                   <img src="./assets/heart.png" alt="" class="max-h-[20px]">  
                 </div>
                 <!-- coin -->
-                <div class="flex gap-[10px] items-center bg-[#41ff6a31] p-[11px] rounded-[50px] pr-9 pl-9">
+                <div class="flex gap-1.5 items-center bg-[#41ff6a31] px-5 py-3  lg:px-8 rounded-full">
                   <p class="font-bold">100</p>
                   <img src="./assets/coin.png" alt="" class="max-h-[24px]">  
                 </div>
-                <div class="flex gap-[10px] items-center bg-[#00A63E] p-[11px] rounded-[50px] pr-9 pl-9">
+                <!-- copy the number -->
+                <div class="flex gap-1.5 items-center bg-[#00A63E] lg:p-[11px] px-4 py-3 rounded-full lg:pr-8 lg:pl-8">
                   <p class="text-white">0</p>
                   <p class="text-white inter-normal">Copy</p>
                 </div>
@@ -39,7 +40,7 @@
 
         </nav>
         <!-- title -->
-        <div class="mx-auto  bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] grid justify-center text-center items-center">
+        <div class="w-full  bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] grid justify-center text-center items-center">
             <img src="./assets/logo-dark.png" alt="" class="max-h-[92px] mx-auto pt-5">
             <h1 class="text-white text-[2.5rem] font-bold pt-2.5 hind-madurai-bold">Emergency Service Directory</h1>
             <p class="text-white text-[1.25rem] font-semibold pt-2.5 pb-5 .hind-madurai-semibold">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
