one cart updated

--- a/index.html
+++ b/index.html
@@ -46,33 +46,31 @@
             <p class="text-white text-[1.25rem] font-semibold pt-2.5 pb-5 .hind-madurai-semibold">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>   
     </header>
-    <main class="mx-auto max-w-[1920px] flex gap-8 justify-center mb-[86px]">
+    <main class="flex flex-col gap-2 lg:grid lg:grid-cols-[70%_30%] justify-between">
         <!-- cart section -->
-        <section class="max-w-[1370px] max-h-[1140px]">
+        <section class="">
             <div class="grid grid-cols-3 gap-8">
             <!-- 1st -->
-            <div>
-                <!-- 1st -->
-                <div class="w-[436.67px] rounded-2xl bg-white p-[32px] shadow-md">
+            <div id="carts">
+                <div class="rounded-2xl bg-white px-8 py-4 shadow-md">
                 <div class="flex items-center  justify-between">
-                    <img src="./assets/emergency.png" alt="" class="p-3.5 bg-[#FFE3E2] rounded-[16px] max-w-[60px]">
+                    <img src="./assets/emergency.png" alt="" class="p-3.5 bg-[#FFE3E2] rounded-[16px] w-[60px]">
                     <span><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-2xl">National Emergency Number</h1>
-                <p class="text-[18px]">National Emergency</p>
+                <p class="text-[1.125rem]">National Emergency</p>
                 <h1 class="font-bold text-3xl">999</h1>
-                <p class="bg-[#F2F2F2] max-w-[53px] text-center rounded-[9999px]">All</p>
-                <div class="flex items-center gap-2">
-                    <button class="p-[10px] border-2 border-[#D4D6D5] rounded-[8px] pr-[61px] pl-[61px]"><i class="fa-regular fa-copy"></i> Copy</button>
-                    <button class="pl-[61px] pr-[61px] rounded-[8px] bg-[#00A63E] p-[10px]"><i class="fa-solid fa-phone"></i> Call </button>
+                <p class="bg-[#F2F2F2] w-[53px] text-center rounded-[9999px]">All</p>
+                <div class="flex items-center gap-2 justify-center">
+                    <button class=" border-2 border-[#D4D6D5] rounded-[8px] lg:px-16 lg:py-2.5 px-9"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class=" rounded-[8px] bg-[#00A63E] lg:px-16 lg:py-2.5 px-9"><i class="fa-solid fa-phone"></i> Call </button>
                 </div>
-
             </div>    
             </div> 
             <!-- 2nd -->
             <div>
                 <!-- 1st -->
-                <div class="w-[436.67px] rounded-2xl bg-white p-[32px] shadow-md">
+                <div class=" rounded-2xl bg-white p-[32px] shadow-md">
                 <div class="flex items-center  justify-between">
                     <img src="./assets/police.png" alt="" class="p-3.5 bg-[#DFEFFF] rounded-[16px] max-w-[60px]">
                     <span><i class="fa-regular fa-heart"></i></span>
